--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/6.management-sequence-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/6.management-sequence-of-mysql-mode.md
@@ -75,7 +75,7 @@ CREATE SEQUENCE [database_name.]sequence_name
 obclient> CREATE SEQUENCE seq1 START WITH 1 MINVALUE 1 MAXVALUE 10 INCREMENT BY 2 NOCYCLE NOORDER CACHE 30;
 ```
 
-更多 `CREATE SEQUENCE` 语句的信息，请参见 [CREATE SEQUENCE](../../../7.reference/6.sql-syntax/2.common-tenant-mysql-mode/6.sql-statement/15.create-sequence-1.md)。
+更多 `CREATE SEQUENCE` 语句的信息，请参见 [CREATE SEQUENCE](../../../4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/15.create-sequence-of-mysql-mode.md)。
 
 ## 使用序列
 
@@ -152,7 +152,7 @@ obclient> ALTER SEQUENCE seq4 START WITH 3 RESTART MINVALUE -100 CYCLE;
 Query OK, 0 rows affected
 ```
 
-更多 `ALTER SEQUENCE` 语句的信息，请参见 [ALTER SEQUENCE](../../../7.reference/6.sql-syntax/2.common-tenant-mysql-mode/6.sql-statement/5.alter-sequence-2.md)。
+更多 `ALTER SEQUENCE` 语句的信息，请参见 [ALTER SEQUENCE](../../../4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/5.alter-sequence-of-mysql-mode.md)。
 
 ## 删除序列
 
@@ -179,4 +179,4 @@ obclient> DROP SEQUENCE S1;
 Query OK, 0 rows affected
 ```
 
-更多 `DROP SEQUENCE` 语句的信息，请参见 [DROP SEQUENCE](../../../7.reference/6.sql-syntax/3.common-tenant-oracle-mode/9.sql-statement-1/1.DDL-1/37.drop-sequence.md)。
+更多 `DROP SEQUENCE` 语句的信息，请参见 [DROP SEQUENCE](../../../4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/29.drop-sequence-of-mysql-mode.md)。
