--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/5.management-sequence-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/5.management-sequence-of-oracle-mode.md
@@ -37,7 +37,7 @@ CREATE SEQUENCE sequence_name
   
 * `CYCLE` 用于指定序列值是否循环。如果序列值循环，则需要指定最大值或最小值。
 
-更多 `CREATE SEQUENCE` 语句的信息，请参见 [CREATE SEQUENCE](../../../7.reference/6.sql-syntax/3.common-tenant-oracle-mode/9.sql-statement-1/1.DDL-1/22.create-sequence.md) 。
+更多 `CREATE SEQUENCE` 语句的信息，请参见 [CREATE SEQUENCE](../../../4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/22.create-sequence-of-oracle-mode.md) 。
 
 示例：创建序列，实现表的列自增。
 
@@ -89,11 +89,11 @@ SEQUENCE_NAME: SEQ_T1
 obclient>
 ```
 
-* 更多 DBA_SEQUENCES 视图的字段及说明信息请参见 [DBA_SEQUENCES](../../../7.reference/14.system-reference/5.system-view-for-oracle/2.dictionary-view-6/98.DBA_SEQUENCES-1.md)。
+* 更多 DBA_SEQUENCES 视图的字段及说明信息请参见 [DBA_SEQUENCES](../../../5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/98.dba_sequences-of-oracle-mode.md)。
 
-* 更多 ALL_SEQUENCES 视图的字段及说明信息请参见 [ALL_SEQUENCES](../../../7.reference/14.system-reference/5.system-view-for-oracle/2.dictionary-view-6/25.ALL_SEQUENCES-1.md)。
+* 更多 ALL_SEQUENCES 视图的字段及说明信息请参见 [ALL_SEQUENCES](../../../5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/25.all_sequences-of-oracle-mode.md)。
 
-* 更多 USER_SEQUENCES 视图的字段及说明信息请参见 [USER_SEQUENCES](../../../7.reference/14.system-reference/5.system-view-for-oracle/2.dictionary-view-6/167.USER_SEQUENCES-1.md)。
+* 更多 USER_SEQUENCES 视图的字段及说明信息请参见 [USER_SEQUENCES](../../../5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/167.user_sequences-of-oracle-mode.md)。
 
 ## 修改序列
 
@@ -111,7 +111,7 @@ ALTER SEQUENCE sequence_name
 [CYCLE | NOCYCLE];
 ```
 
-更多 `ALTER SEQUENCE` 语句的信息，请参见 [ALTER SEQUENCE](../../../7.reference/6.sql-syntax/3.common-tenant-oracle-mode/9.sql-statement-1/1.DDL-1/6.alter-sequence.md)。
+更多 `ALTER SEQUENCE` 语句的信息，请参见 [ALTER SEQUENCE](../../../4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/6.alter-sequence-of-oracle-mode.md)。
 
 示例：修改自增列 my_sequence 的最大值，并指定自增值循环生成。
 
@@ -127,7 +127,7 @@ obclient> ALTER SEQUENCE my_sequence MAXVALUE 1024 CYCLE;
 DROP SEQUENCE sequence_name;
 ```
 
-更多 `DROP SEQUENCE` 语句的信息，请参见 [DROP SEQUENCE](../../../7.reference/6.sql-syntax/3.common-tenant-oracle-mode/9.sql-statement-1/1.DDL-1/37.drop-sequence.md) 。
+更多 `DROP SEQUENCE` 语句的信息，请参见 [DROP SEQUENCE](../../../4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/37.drop-sequence-of-oracle-mode.md) 。
 
 示例：删除自增列 S1。
 
