--- a/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/3.sequence-pseudo-column-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/3.sequence-pseudo-column-of-mysql-mode.md
@@ -36,7 +36,7 @@ SELECT SEQUENCE_NAME.CURRVAL FROM DUAL;     /*执行多少次 Sequence 号都不
 
 在会话中引用序列的 `CURRVAL` 伪列前，都应首先应用序列的 `NEXTVAL` 伪列来初始化本次会话的序列值。
 
-创建序列时，可以定义其初始值以及其值之间的增量。对 `NEXTVAL` 的第一次引用将返回序列的初始值。对 `NEXTVAL` 的后续引用将会使序列值按照定义的增量递增，并返回新值。任何对 `CURRVAL` 的引用总是返回该序列的当前值，即最后一次对 `NEXTVAL` 引用时返回的值。对序列的创建和删除的相关内容，请参见 [CREATE SEQUENCE](../3.common-tenant-oracle-mode/9.sql-statement-1/1.DDL-1/22.create-sequence.md) 和 [DROP SEQUENCE](../3.common-tenant-oracle-mode/9.sql-statement-1/1.DDL-1/37.drop-sequence.md)。
+创建序列时，可以定义其初始值以及其值之间的增量。对 `NEXTVAL` 的第一次引用将返回序列的初始值。对 `NEXTVAL` 的后续引用将会使序列值按照定义的增量递增，并返回新值。任何对 `CURRVAL` 的引用总是返回该序列的当前值，即最后一次对 `NEXTVAL` 引用时返回的值。对序列的创建和删除的相关内容，请参见 [CREATE SEQUENCE](../3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/22.create-sequence-of-oracle-mode.md) 和 [DROP SEQUENCE](../3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/37.drop-sequence-of-oracle-mode.md)。
 
 ## 示例
 
