--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/5.management-sequence-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/5.management-sequence-of-oracle-mode.md
@@ -38,7 +38,7 @@ CREATE SEQUENCE sequence_name
   
 * `CYCLE` 用于指定序列值是否循环。如果序列值循环，则需要指定最大值或最小值。
 
-更多 `CREATE SEQUENCE` 语句的信息，请参见 [CREATE SEQUENCE](../../../4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/22.create-sequence-of-oracle-mode.md) 。
+更多 `CREATE SEQUENCE` 语句的信息，请参见 [CREATE SEQUENCE](../../../4.development-reference1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/22.create-sequence-of-oracle-mode.md) 。
 
 示例：创建序列，实现表的列自增。
 
@@ -112,7 +112,7 @@ ALTER SEQUENCE sequence_name
 [CYCLE | NOCYCLE];
 ```
 
-更多 `ALTER SEQUENCE` 语句的信息，请参见 [ALTER SEQUENCE](../../../4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/6.alter-sequence-of-oracle-mode.md)。
+更多 `ALTER SEQUENCE` 语句的信息，请参见 [ALTER SEQUENCE](../../../4.development-reference1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/6.alter-sequence-of-oracle-mode.md)。
 
 示例：修改自增列 my_sequence 的最大值，并指定自增值循环生成。
 
@@ -128,7 +128,7 @@ obclient> ALTER SEQUENCE my_sequence MAXVALUE 1024 CYCLE;
 DROP SEQUENCE sequence_name;
 ```
 
-更多 `DROP SEQUENCE` 语句的信息，请参见 [DROP SEQUENCE](../../../4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/37.drop-sequence-of-oracle-mode.md) 。
+更多 `DROP SEQUENCE` 语句的信息，请参见 [DROP SEQUENCE](../../../4.development-reference1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/37.drop-sequence-of-oracle-mode.md) 。
 
 示例：删除自增列 S1。
 
