--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/6.manage-sequence-of-mysql-mode/5.delete-a-squence-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/6.manage-sequence-of-mysql-mode/5.delete-a-squence-of-mysql-mode.md
@@ -27,7 +27,7 @@ obclient> DROP SEQUENCE S1;
 Query OK, 0 rows affected
 ```
 
-更多 `DROP SEQUENCE` 语句的信息，请参见 [DROP SEQUENCE](../../../4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/29.drop-sequence-of-mysql-mode.md)。
+更多 `DROP SEQUENCE` 语句的信息，请参见 [DROP SEQUENCE](../../../../4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/39.drop-sequence-of-mysql-mode.md)。
 
 ## 相关文档
 
