--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/6.manage-sequence-of-mysql-mode/1.create-a-sequence-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/6.manage-sequence-of-mysql-mode/1.create-a-sequence-of-mysql-mode.md
@@ -2,8 +2,6 @@
 
 在 OceanBase 数据库中，序列（Sequence）是数据库按照一定规则生成的自增数字序列号，通常是一组间隔的数值（为数字类型）。由于序列具有自增的特性，故通常会被用作主键和唯一键。
 
-## 语法
-
 可以使用 `CREATE SEQUENCE` 语句来创建序列。序列提供了两个伪列 `CURRVAL`和 `NEXTVAL`，用于返回当前的序列值和下一个序列值。每当查询 `NEXTVAL` 都会推进 `CURRVAL` 值。
 
 SQL 语法如下：
@@ -60,9 +58,7 @@ CREATE SEQUENCE [IF NOT EXISTS] [database_name.]sequence_name
 </ul>
 </main>
 
-## 示例
-
-创建一个序列 `seq1` 并指定自增步数为 `2`。
+创建一个序列 `seq1` 并指定自增步数为 `2` 的示例如下：
 
 ```sql
 obclient> CREATE SEQUENCE seq1 START WITH 1 MINVALUE 1 MAXVALUE 10 INCREMENT BY 2 NOCYCLE NOORDER CACHE 30;
