--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/6.manage-sequence-of-mysql-mode/5.delete-a-squence-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/6.manage-sequence-of-mysql-mode/5.delete-a-squence-of-mysql-mode.md
@@ -2,8 +2,6 @@
 
 可以使用 `DROP SEQUENCE` 语句来删除序列。
 
-## 语法
-
 删除序列的 SQL 语法如下：
 
 ```sql
@@ -18,9 +16,7 @@ DROP SEQUENCE [IF EXISTS] [database_name.]sequence_name;
 
 * `database_name.` 用于指定序列所在的数据库。如果不指定 `database_name.` ，则默认为当前登录数据库的序列。
 
-## 示例
-
-删除序列 `S1`。
+删除序列 `S1`的示例如下：
 
 ```sql
 obclient> DROP SEQUENCE S1;
