--- a/zh-CN/6.manage/5.security-and-permissions/2.identification-and-authentication/2.identification-and-authentication-of-oracle-mode/3.login-failure-handling-of-oracle-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/2.identification-and-authentication/2.identification-and-authentication-of-oracle-mode/3.login-failure-handling-of-oracle-mode.md
@@ -105,7 +105,7 @@ Profile 文件对密码提供了两个参数来实现连续登录失败后锁定
 1. 使用 sys 用户登录集群的 Oracle 租户。
 
     ```shell
-    obclient -usys@oracle -h127.1 -P2881 -  P***1*** 
+    obclient -usys@oracle -h127.1 -P2881 -  P******* 
     ```
 
 2. 创建 Profile 并设置连续错误登录策略。
@@ -141,7 +141,7 @@ Profile 文件对密码提供了两个参数来实现连续登录失败后锁定
 4. 创建用户，并指定 Profile。
 
    ```shell
-   obclient> CREATE USER secuser IDENTIFIED BY ***1** PROFILE "userprof1";
+   obclient> CREATE USER secuser IDENTIFIED BY ****** PROFILE "userprof1";
    
    obclient> GRANT all privileges ON *.* to secuser;
    ```
@@ -151,7 +151,7 @@ Profile 文件对密码提供了两个参数来实现连续登录失败后锁定
    当连续输入 5 次错误密码时，用户会被锁定一天。
 
    ```shell
-   $ obclient -h127.1 -P2881 -usecuser@oracle -p**123**;
+   $ obclient -h127.1 -P2881 -usecuser@oracle -p*******;
    obclient: [Warning] Using a password on the command line interface can be insecure.
    ERROR 5039 (01007): User locked
    ```
