--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/3.create-a-user-tenant.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/3.create-a-user-tenant.md
@@ -13,9 +13,9 @@ OceanBase 数据库默认会自动创建 sys 租户，sys 租户负责一部分 
 1. 使用系统租户的 root 用户（`root@sys`）连接 OceanBase 数据库。如下所示，您可使用 OBClient 或 MySQL 客户端进行连接：
 
    ```bash
-   obclient -hxxxx -uroot@sys -P${port_num} -p -Doceanbase -A
+   obclient -hxxxx -uroot@sys -P${port_num} -p****** -Doceanbase -A
    # 或
-   mysql -hxxxx -uroot@sys -P${port_num} -p -Doceanbase -A
+   mysql -hxxxx -uroot@sys -P${port_num} -p****** -Doceanbase -A
    ```
 
    OBClient 的详细信息，请参考 [OBClient 文档](https://github.com/oceanbase/obclient/blob/master/README.md)。
@@ -107,12 +107,12 @@ OceanBase 数据库默认会自动创建 sys 租户，sys 租户负责一部分 
 
    ```sql
    # 使用 root@tenant1 连接 OceanBase 数据库
-   obclient -hxxxx -uroot@tenant1 -P${port_num} -p -Doceanbase -A
+   obclient -hxx.xx.xx.xx -uroot@tenant1 -P${port_num} -p****** -Doceanbase -A
    
    # 修改密码
-   obclient> ALTER USER username IDENTIFIED BY 'password';
+   obclient> ALTER USER username IDENTIFIED BY '********';
    # 举例如下
-   obclient> ALTER USER root IDENTIFIED BY 'Xc****Db';
+   obclient> ALTER USER root IDENTIFIED BY '********';
    ```
 
    命令详细介绍请参考 [修改用户密码](9.manage-users-and-permissions/3.mysql-mode/6.change-user-password-of-mysql-mode.md)。
