--- a/zh-CN/7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/256.dba_sequences-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/256.dba_sequences-of-oracle-mode.md
@@ -10,10 +10,10 @@
 |----------------|---------------|----------------|-------------------|
 | SEQUENCE_OWNER | VARCHAR2(128) | NO   | 序列所在的数据库的名称   |
 | SEQUENCE_NAME  | VARCHAR2(128) | NO   | 序列名称     |
-| MIN_VALUE      | NUMBER(28)    | NO   | 最小值     |
-| MAX_VALUE      | NUMBER(28)    | NO   | 最大值    |
-| INCREMENT_BY   | NUMBER(28)    | NO   | 步长      |
-| CYCLE_FLAG     | CHAR(1)       | NO   | 是否循环   |
-| ORDER_FLAG     | CHAR(1)       | NO   | 是否有序   |
-| CACHE_SIZE     | NUMBER(28)    | NO   | 缓存大小    |
-| LAST_NUMBER    | NUMBER(38)    | NO   | 上一个值   |
+| MIN_VALUE      | NUMBER(28)    | NO   | 可取的最小值（含）     |
+| MAX_VALUE      | NUMBER(28)    | NO   | 可取的最大值（含最大值）    |
+| INCREMENT_BY   | NUMBER(28)    | NO   | 每次取值的步长，可为正整数或负整数，不可为 0      |
+| CYCLE_FLAG     | CHAR(1)       | NO   | 是否可以循环取值   |
+| ORDER_FLAG     | CHAR(1)       | NO   | 取值是否保证全局有序   |
+| CACHE_SIZE     | NUMBER(28)    | NO   | 每个节点缓存值的数量    |
+| LAST_NUMBER    | NUMBER(38)    | NO   | 记录下一个可分配给节点的值   |
