--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/5.management-sequence-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/5.management-sequence-of-oracle-mode.md
@@ -71,7 +71,7 @@ obclient> SELECT * FROM t1;
 
 ## 查看序列
 
-序列创建成功后，可以通过 USER_SEQUENCES、ALL_SEQUENCES 和 DBA_SEQUENCES 视图来查看自己创建的序列。
+序列创建成功后，可以通过 `USER_SEQUENCES`、`ALL_SEQUENCES` 和 `DBA_SEQUENCES` 视图来查看自己创建的序列。
 
 示例如下：
 
@@ -90,11 +90,11 @@ SEQUENCE_NAME: SEQ_T1
 obclient>
 ```
 
-* 更多 DBA_SEQUENCES 视图的字段及说明信息请参见 [DBA_SEQUENCES](../../../5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/98.dba_sequences-of-oracle-mode.md)。
+* 更多 `DBA_SEQUENCES` 视图的字段及说明信息请参见 [DBA_SEQUENCES](../../../5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/256.dba_sequences-of-oracle-mode.md)。
 
-* 更多 ALL_SEQUENCES 视图的字段及说明信息请参见 [ALL_SEQUENCES](../../../5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/25.all_sequences-of-oracle-mode.md)。
+* 更多 `ALL_SEQUENCES` 视图的字段及说明信息请参见 [ALL_SEQUENCES](../../../5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/25.all_sequences-of-oracle-mode.md)。
 
-* 更多 USER_SEQUENCES 视图的字段及说明信息请参见 [USER_SEQUENCES](../../../5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/167.user_sequences-of-oracle-mode.md)。
+* 更多 `USER_SEQUENCES` 视图的字段及说明信息请参见 [USER_SEQUENCES](../../../5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/167.user_sequences-of-oracle-mode.md)。
 
 ## 修改序列
 
