--- a/zh-CN/7.reference/3.database-object-management/1.manage-object-of-mysql-mode/7.manage-sequence-of-mysql-mode/4.modify-a-sequence-of-mysql-mode.md
+++ b/zh-CN/7.reference/3.database-object-management/1.manage-object-of-mysql-mode/7.manage-sequence-of-mysql-mode/4.modify-a-sequence-of-mysql-mode.md
@@ -50,7 +50,7 @@ ALTER SEQUENCE [database_name.]sequence_name
    Query OK, 0 rows affected
    ```
 
-更多 `ALTER SEQUENCE` 语句的信息，请参见 [ALTER SEQUENCE](../../../../4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/14.alter-sequence-of-mysql-mode.md)。
+更多 `ALTER SEQUENCE` 语句的信息，请参见 [ALTER SEQUENCE](../../../5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/14.alter-sequence-of-mysql-mode.md)。
 
 ## 相关文档
 
